fix spacing

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
 h1 {
   font-size: 40px;
   text-align: center;
-  margin-bottom: 8%;
+  margin-bottom: 3%;
 }
 
 .calculator {
